--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.5.1",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^1.0.1"
   }
 }
